--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -33,6 +33,6 @@
             </div>
             <button class=" btn btn-success mb-3">Update Campground</button>
         </form>
-        <a href="/campgrounds">Cancel</a>
+        <a href="/campgrounds/<%= campground._id %>">Cancel</a>
     </div>
 </div>
