--- a/views/error.ejs
+++ b/views/error.ejs
@@ -3,7 +3,7 @@
     <div class="col-6 offset-3">
         <div class="alert alert-danger" role="alert">
             <h4 class="alert-heading"><%= err.message %> </h4>
-            <p>:( </p>
+            <p><%= err.stack %> </p>
             <hr>
             <p class="mb-0">Have a nice day and don't give up!</p>
         </div>
