--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -9,14 +9,17 @@
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item text-muted"><%= campground.location %> </li>
+                <li class="list-group-item">Submitted By <%= campground.author.username %> </li>
                 <li class="list-group-item">$ <%= campground.price %> / night</li>
             </ul>
+            <% if(currentUser && campground.author.equals(currentUser._id)){ %>
             <div class="card-body">
                 <a class="card-link btn btn-primary" href="/campgrounds/<%= campground._id %>/edit">edit</a>
                 <form class="d-inline" action="/campgrounds/<%= campground._id %>?_method=DELETE" method='POST'>
                     <button class="btn btn-danger">delete</button>
                 </form>
             </div>
+            <% } %>
             <div class="card-footer text-muted">
                 2 days ago
                 <a href="/campgrounds"> All campgrounds</a>
@@ -24,6 +27,7 @@
         </div>
     </div>
     <div class="col-6">
+        <% if(currentUser){ %>
         <h2>Leave a Review:</h2>
         <form class="mb-3 validated-form" novalidate action="/campgrounds/<%= campground._id%>/reviews" method="POST">
             <div class="mb-3">
@@ -39,15 +43,19 @@
             </div>
             <button class="btn btn-success">Submit</button>
         </form>
+        <% } %>
         <% for(let review of campground.reviews){ %>
         <div class="card mb-3">
             <div class="card-body">
                 <h5 class="card-title">Rating: <%=  review.rating %></h5>
+                <p class="card-subtitle mb-2 text-muted"> -by <%= review.author.username %></p>
                 <p class="card-text"><%= review.body %></p>
+                <% if(currentUser && review.author.equals(currentUser._id)){ %>
                 <form action="/campgrounds/<%= campground._id %>/reviews/<%= review._id %>?_method=DELETE"
                     method="POST">
                     <button class="btn btn-sm btn-danger">Delete</button>
                 </form>
+                <% } %>
             </div>
         </div>
         <% } %>
