--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,4 +1,5 @@
 <% layout('layouts/boilerplate') %>
+<link rel="stylesheet" href="/stylesheets/stars.css">
 <div class="row">
     <div class="col-6">
         <div class="card mb-3">
@@ -30,10 +31,21 @@
         <% if(currentUser){ %>
         <h2>Leave a Review:</h2>
         <form class="mb-3 validated-form" novalidate action="/campgrounds/<%= campground._id%>/reviews" method="POST">
-            <div class="mb-3">
-                <label class="form-label" for="rating">Rating:</label>
-                <input class="form-range" type="range" min="1" max="5" name="review[rating]" id="range">
-            </div>
+            <fieldset class="starability-grow mb-3">
+                <legend>Rating:</legend>
+                <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="0" checked
+                    aria-label="No rating." />
+                <input type="radio" id="first-rate1" name="review[rating]" value="1" />
+                <label for="first-rate1" title="Terrible">1 star</label>
+                <input type="radio" id="first-rate2" name="review[rating]" value="2" />
+                <label for="first-rate2" title="Not good">2 stars</label>
+                <input type="radio" id="first-rate3" name="review[rating]" value="3" />
+                <label for="first-rate3" title="Average">3 stars</label>
+                <input type="radio" id="first-rate4" name="review[rating]" value="4" />
+                <label for="first-rate4" title="Very good">4 stars</label>
+                <input type="radio" id="first-rate5" name="review[rating]" value="5" />
+                <label for="first-rate5" title="Amazing">5 stars</label>
+            </fieldset>
             <div class="mb-3">
                 <label class="form-label" for="body">Review:</label>
                 <textarea class="form-control" name="review[body]" id="body" cols="30" rows="3" required></textarea>
@@ -47,8 +59,12 @@
         <% for(let review of campground.reviews){ %>
         <div class="card mb-3">
             <div class="card-body">
-                <h5 class="card-title">Rating: <%=  review.rating %></h5>
-                <p class="card-subtitle mb-2 text-muted"> -by <%= review.author.username %></p>
+                <h5 class="card-title"><%= review.author.username %></h5>
+
+                <p class="starability-result" data-rating="<%=  review.rating %>">
+                    Rated: <%=  review.rating %> stars
+                </p>
+
                 <p class="card-text"><%= review.body %></p>
                 <% if(currentUser && review.author.equals(currentUser._id)){ %>
                 <form action="/campgrounds/<%= campground._id %>/reviews/<%= review._id %>?_method=DELETE"
