--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -2,7 +2,8 @@
 <div class="row">
     <h1 class="text-center">Edit Campground:</h1>
     <div class="col-6 offset-3">
-        <form action="/campgrounds/<%= campground._id %>?_method=PUT" method='POST' novalidate class="validated-form">
+        <form action="/campgrounds/<%= campground._id %>?_method=PUT" method='POST' novalidate class="validated-form"
+            enctype="multipart/form-data">
             <div class="mb-3">
                 <label class="form-label" for="title">Title:</label>
                 <input class="form-control" type="text" name="campground[title]" id="title"
@@ -14,9 +15,19 @@
                     value="<%= campground.location %>" required>
             </div>
             <div class=" mb-3">
-                <label class="form-label" for="image">Image URL:</label>
-                <input class="form-control" type="text" name="campground[image]" id="image"
-                    value="<%= campground.image %>" required>
+                <label class="form-label" for="image">Add Images:</label>
+                <input type="file" name="image" id="image" multiple>
+            </div>
+            <div class="mb-3">
+                <% campground.images.forEach(function(img, i) { %>
+                <div>
+                    <img src="<%= img.thumbnail %>" alt="" class="img-thumbnail">
+                    <div class="form-check-inline">
+                        <input type="checkbox" id="img-<%= i %>" name="deleteImages[]" value="<%= img.filename %>">
+                    </div>
+                    <label for="img-<%= i %>" class="d-inline">Delete image</label>
+                </div>
+                <% }) %>
             </div>
             <div class=" mb-3">
                 <label class="form-label" for="price">Campground price:</label>
