--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -2,8 +2,26 @@
 <link rel="stylesheet" href="/stylesheets/stars.css">
 <div class="row">
     <div class="col-6">
+        <div id="carouselControls" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <% campground.images.forEach((img, i) => { %>
+                <div class="carousel-item <%= i === 0 ? 'active' : '' %> ">
+                    <img src="<%= img.url %>" class="d-block w-100" alt="">
+                </div>
+                <% }) %>
+            </div>
+            <% if(campground.images.length > 1) { %>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselControls" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselControls" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+            <% } %>
+        </div>
         <div class="card mb-3">
-            <img src="<%= campground.image %> " class="card-img-top" alt="image">
             <div class="card-body">
                 <h5 class="card-title"><%= campground.title %> </h5>
                 <p class="card-text"><%= campground.description %> </p>
@@ -55,6 +73,10 @@
             </div>
             <button class="btn btn-success">Submit</button>
         </form>
+        <% } else { %>
+        <h2>You need to log in to leave a review!</h2>
+        <a class="btn btn-warning mb-3" href="../login">Log in</a>
+        <a class="btn btn-warning mb-3" href="../register">Register</a>
         <% } %>
         <% for(let review of campground.reviews){ %>
         <div class="card mb-3">
