--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -5,7 +5,11 @@
 <div class="card">
     <div class="row">
         <div class="col-md-4">
-            <img class='img-fluid' src="<%= camp.images[0].url %> " alt="">
+            <% if(camp.images.length){ %> 
+                <img class='img-fluid' src="<%= camp.images[0].url %> " alt="">
+            <% }else { %>
+                <img class='img-fluid' src="" alt="">
+            <% } %>  
         </div>
         <div class="col-md-8">
             <div class="card-body">
