--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -46,6 +46,7 @@
         </div>
     </div>
     <div class="col-6">
+        <div id='map' style='width: 400px; height: 300px;' class="mb-3"></div>
         <% if(currentUser){ %>
         <h2>Leave a Review:</h2>
         <form class="mb-3 validated-form" novalidate action="/campgrounds/<%= campground._id%>/reviews" method="POST">
@@ -99,3 +100,9 @@
         <% } %>
     </div>
 </div>
+
+<script>
+    const mapToken = '<%- process.env.MAPBOX_TOKEN %>';
+    const campground = <%- JSON.stringify(campground) %> ;
+</script>
+<script src="/javascripts/showPageMap.js"></script>
