--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,9 +1,9 @@
 <% layout('layouts/boilerplate') %>
-<div id="map" style="width: 100%; height: 500px"></div>
+<div id="cluster-map" class="mb-3"></div>
 <h1>All Campgrounds:</h1>
 <a href="/campgrounds/new">add new campground</a>
 <% for(let camp of campgrounds){ %>
-<div class="card">
+<div class="card mb-3">
     <div class="row">
         <div class="col-md-4">
             <% if(camp.images.length){ %>
@@ -28,7 +28,9 @@
 
 <script>
     const mapToken = '<%- process.env.MAPBOX_TOKEN %>';
-    const campgrounds = {features: <%- JSON.stringify(campgrounds) %>}
+    const campgrounds = {
+        features: <%-JSON.stringify(campgrounds) %>
+    }
 </script>
 
 <script src="/javascripts/clusterMap.js"></script>
