--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -46,7 +46,7 @@
         </div>
     </div>
     <div class="col-6">
-        <div id='map' style='width: 400px; height: 300px;' class="mb-3"></div>
+        <div id='map' class="mb-3"></div>
         <% if(currentUser){ %>
         <h2>Leave a Review:</h2>
         <form class="mb-3 validated-form" novalidate action="/campgrounds/<%= campground._id%>/reviews" method="POST">
