--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,15 +1,28 @@
 <% layout('layouts/boilerplate') %>
-<h1>LOG IN</h1>
-<form action="/login" method="POST" class="validated-form" novalidate>
-    <div class="mb-3">
-        <label class="form-label" for="username">Username: </label>
-        <input class="form-control" type="text" id="username" name="username" required>
-        <div class="valid-feedback">Looks Good!</div>
+
+<div class="container justify-content-center align-items-center mt-5">
+    <div class="row">
+        <div class="col-md-6 offset-md-3 col-xl-4 offset-xl-4">
+            <div class="card shadow">
+                <img src="https://images.unsplash.com/photo-1478131143081-80f7f84ca84d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1170&q=80"
+                    alt="" class="card-img-top">
+                <div class="card-body">
+                    <h3 class="card-title">LOG IN</h3>
+                    <form action="/login" method="POST" class="validated-form" novalidate>
+                        <div class="mb-3">
+                            <label class="form-label" for="username">Username: </label>
+                            <input class="form-control" type="text" id="username" name="username" required autofocus>
+                            <div class="valid-feedback">Looks Good!</div>
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label" for="password">Password: </label>
+                            <input class="form-control" type="password" id="password" name="password" required>
+                            <div class="valid-feedback">Looks Good!</div>
+                        </div>
+                        <button class="btn btn-success col-12">Log in</button>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="mb-3">
-        <label class="form-label" for="password">password: </label>
-        <input class="form-control" type="password" id="password" name="password" required>
-        <div class="valid-feedback">Looks Good!</div>
-    </div>
-    <button class="btn btn-success">Log in</button>
-</form>
+</div>
